--- a/index.html
+++ b/index.html
@@ -1,38 +1,54 @@
-<div id="app">
-  <div class="container">
-    <h1>Bet Verification <a @click="changeGame('dice')" :class="{active: game==='dice'}">DICE</a><a @click="changeGame('crash')" :class="{active: game==='crash'}">CRASH</a></h1>
-    <div class="field">
-      <label class="label">Server seed</label>
-      <div class="control">
-        <input class="input is-small" v-model.trim="verifyServer" type="text">
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Server seed hash</label>
-      <div class="control">
-        <input class="input is-small" v-model="verifyHash" type="text" :disabled="true">
-      </div>
-    </div>
-    <div class="columns ">
-      <div class="column is-6">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>WINDICE.io - Provably Fair</title>
+
+    <link rel="preload" href="style.css" as="style">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js" as="script">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js" as="script">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.19.1/URI.min.js" as="script">
+    
+  </head>
+  <body>
+    <div id="app">
+      <div class="container">
+        <h1>Bet Verification <a @click="changeGame('dice')" :class="{active: game==='dice'}">DICE</a><a @click="changeGame('crash')" :class="{active: game==='crash'}">CRASH</a></h1>
         <div class="field">
-          <label class="label">Client seed</label>
+          <label class="label">Server seed</label>
           <div class="control">
-            <input class="input is-small" v-model.trim="verifyClient" type="text">
+            <input class="input is-small" v-model.trim="verifyServer" type="text">
           </div>
         </div>
-      </div>
-      <div class="column is-2">
         <div class="field">
-          <label class="label">Nonce</label>
+          <label class="label">Server seed hash</label>
           <div class="control">
-            <input class="input is-small" v-model.number="verifyNonce" type="text">
+            <input class="input is-small" v-model="verifyHash" type="text" :disabled="true">
           </div>
+        </div>
+        <div class="columns ">
+          <div class="column is-6">
+            <div class="field">
+              <label class="label">Client seed</label>
+              <div class="control">
+                <input class="input is-small" v-model.trim="verifyClient" type="text">
+              </div>
+            </div>
+          </div>
+          <div class="column is-2">
+            <div class="field">
+              <label class="label">Nonce</label>
+              <div class="control">
+                <input class="input is-small" v-model.number="verifyNonce" type="text">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="result-data">
+          Result: {{result}}
         </div>
       </div>
     </div>
-    <div class="result-data">
-      Result: {{result}}
-    </div>
-  </div>
-</div>
+  </body>
+</html>  
