--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js" as="script">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js" as="script">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.19.1/URI.min.js" as="script">
+    <link rel="preload" href="app.js" as="script">
     
   </head>
   <body>
