--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.19.1/URI.min.js"></script>
-    <!--<script type="text/javascript" src="app.js"></script>-->
+    <script type="text/javascript" src="app.js" type="module"></script>
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    
+    <!--
     <script type="text/javascript">
       new Vue({
         el: "#app",
@@ -149,5 +149,6 @@
         }
       })
     </script>
+-->
   </body>
 </html>  
