--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div id="app">
+      <div class="logo"><img src="logo_text.svg" alt="windice logo"></div>
       <div class="container">
         <h1>Bet Verification <a @click="changeGame('dice')" :class="{active: game==='dice'}">DICE</a><a @click="changeGame('crash')" :class="{active: game==='crash'}">CRASH</a></h1>
         <div class="field">
